# crowd-lunch

./: .devinapps  .eslintrc.cjs  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  README_IMAGE_UPLOAD.md  README_PRODUCTION_DEPLOYMENT.md  check_db_schema.py  create_test_menu.py  debug_jwt.py  debug_validation.py  deploy_images_to_production.sh  devinapps.json  docker-compose.yml  e2e_auth_documentation.py  fix_delivery_location_data.py  fly.staging.toml  fly.toml  netlify.toml  railway.json  test_auth_security.py  test_boundary.py  test_cafe_time_closed.py  test_db_schema.py  test_e2e_auth_flow.py  test_local_validation.py  test_order_validation.py  verification_tests.py  verify_production_deployment.py
api/: .coverage  .env.example  Dockerfile  add_future_menu_data.py  add_sample_data.py  alembic.ini  crowdlunch.db  debug_db.py  fly.toml  init_db.py  pyproject.toml  seed_production_menus.py  test.db  test_db_schema.py  test_future_date_validation.py  test_jst_validation.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_migration.py  1754011847_add_delivered_at_to_orders.py  17bfd55f4976_merge_migration_heads.py  2c841cded694_add_cafe_time_available_to_menus_table.py  (+10 more)
api/app/: auth.py  catalog_routes.py  crud.py  database.py  email_service.py  legal_templates.py  logging.py  main.py  models.py  schemas.py  time_utils.py
api/scripts/: load_test.py  locust_load_test.py
api/tests/: test_main.py
keypersons-connect-api/: .env.example  pyproject.toml
keypersons-connect-api/app/: auth.py  firestore_db.py  main.py  schemas.py
web/: .env  (+11 more)
(+61 files in other folders)
